[package]
name = "reia"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

[features]
trace_tracy = []

[dependencies]
bytes = "1.10.1"
godot = "^0.3.4"
godot_tokio = "^0.3.1"
rand = "0.9.2"
sustenet = { path = "./externals/sustenet/rust/sustenet", features = ["full"] }
tokio = { version = "1.47.1", features = ["sync"] }
turso = "0.1.5"
