[package]
name = "reia_backend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

[dependencies]
dashmap = "6.1.0"
flume = "0.12.0"
godot = "0.4.5"
libsql = "0.9.30"
parking_lot = "0.12.5"
quinn = "0.11.9"
rcgen = "0.14.7" # For generating self-signed certs during local dev
rkyv = "0.8.15" # Zero-copy serialization for networking
rustls = { version = "0.23.37", features = [
	"ring",
] } # Required by Quinn for TLS
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
