[package]
name = "reia_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
mongodb = "2.8"
polodb_core = "4.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
